[package]
name = "datafusion-benchmarks"
version = "0.1.0"
authors = ["michael storm angerman"]
edition = "2021"
default-run = "sqlrun"

[dependencies]
arrow = { version = "39.0.0", features = ["prettyprint"] }
arrow-array = "39.0.0"
arrow-cast = "39.0.0"
arrow-flight = { version = "39.0.0", features = ["cli", "flight-sql-experimental", "tls"] }
arrow-schema = { version = "39.0.0" }
clap = { version = "4.3", features = ["derive"] }
csv = "1.2"
datafusion = "25.0.0"
env_logger = "0.10"
futures = "0.3"
mimalloc = { version = "0.1", optional = true, default-features = false }
num_cpus = "1.13.0"
parquet = { version = "39.0.0", features = ["arrow", "async", "object_store"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
snmalloc-rs = { version = "0.3", optional = true }
structopt = { version = "0.3", default-features = false }
tokio = { version = "^1.0", features = ["macros", "rt", "rt-multi-thread", "parking_lot"] }
tonic = { version = "0.9", default-features = false, features = ["transport", "codegen", "prost"] }
tracing-log = { version = "0.1"}
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["ansi", "fmt"]}

[dev-dependencies]
datafusion-proto = "25.0.0"
